<resources>
    <string name="app_name">IKMarket</string>
    <string name="title_home">Home</string>
    <string name="title_komoditas">Komoditas</string>
    <string name="title_market">Market</string>
    <string name="helloadmin">Hello Admin!</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="search">Masukkan Pencarian</string>
    <string name="notfound">Record not found</string>
    <string name="detail">Detail</string>
    <string name="lihatlokasi">Lihat Lokasi</string>
    <string name="admin_login">Login Admin</string>
    <string name="haiadmin">Hai Admin!</string>
    <string name="logout">Logout</string>
    <string name="product">Product</string>
    <string name="lainnya">Lainnya</string>
    <string name="add">Add</string>
    <string name="namaproduct">Nama Product</string>
    <string name="price">Harga</string>
    <string name="tambahkomoditas">Tambah Komoditas</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="tambah">Tambah</string>
    <string name="name_quality">Nama Kualitas</string>
    <string name="namamarket">Nama Pasar</string>
    <string name="fulladdress">Alamat Lengkap</string>
    <string name="longlat">Longitude Latitude</string>
    <string name="openat">Buka pada</string>
    <string name="desc">Description</string>
    <string name="tambahmarket">Tambah Pasar</string>
    <string name="title_grafik">Grafik</string>
    <string name="jenisolahan">Jenis Olahan</string>
    <string name="kualitas">Kualitas</string>
    <string name="terakhirupdate">Terakhir Update</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupatenkota">Kabupaten / Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="address">Alamat Lengkap</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="updatekomoditas">Update Komoditas</string>
    <string name="updatemarkets">Update Markets</string>
</resources>
