<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_komoditas">

    <fragment
        android:id="@+id/navigation_grafik"
        android:name="com.example.ikmarket.ui.grafik.GrafikFragment"
        android:label="@string/title_grafik"
        tools:layout="@layout/fragment_grafik" />

    <fragment
        android:id="@+id/navigation_komoditas"
        android:name="com.example.ikmarket.ui.komoditas.KomoditasFragment"
        android:label="@string/title_komoditas"
        tools:layout="@layout/fragment_komoditas" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.example.ikmarket.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />
</navigation>
