<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.TambahMarketActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_8dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imgMarket"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:scaleType="centerCrop"
            android:src="#4D000000"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <ImageView
            android:id="@+id/ic_Camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/imgMarket"
            app:layout_constraintEnd_toEndOf="@+id/imgMarket"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgMarket" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/namamarket"
            app:layout_constraintTop_toBottomOf="@+id/imgMarket"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtnamamarket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnermarketcategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toBottomOf="@+id/textField" />

        <Spinner
            android:id="@+id/spinnerprovince"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/spinnermarketcategory"
            app:layout_constraintTop_toBottomOf="@+id/spinnermarketcategory" />

        <Spinner
            android:id="@+id/spinnerregency"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/spinnerprovince"
            app:layout_constraintTop_toBottomOf="@+id/spinnerprovince" />

        <Spinner
            android:id="@+id/spinnerdistrict"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/spinnerregency"
            app:layout_constraintTop_toBottomOf="@+id/spinnerregency" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/fulladdress"
            app:layout_constraintTop_toBottomOf="@id/spinnerdistrict">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtfulladdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/longlat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField2"
            app:layout_constraintWidth_percent="0.85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtlonglat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btngetlonglat"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginLeft="@dimen/margin_padding_4dp"
            android:background="@drawable/ic_bg_outlined"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/textField3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textField3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/openat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtopenat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="time"
                android:lines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/tambahmarkets"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/tambahmarket"
            app:layout_constraintTop_toBottomOf="@id/textField5"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>