<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.KomoditasUpdateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_16dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/namaproduct"
            app:layout_constraintTop_toBottomOf="@+id/imgMarket"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtnamaproduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnermarketcategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toBottomOf="@+id/textField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/price"
            app:layout_constraintTop_toBottomOf="@id/spinnermarketcategory">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtharga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerquality"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/textField2"
            app:layout_constraintTop_toBottomOf="@+id/textField2" />

        <Spinner
            android:id="@+id/spinnerunit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/spinnerquality"
            app:layout_constraintTop_toBottomOf="@+id/spinnerquality" />


        <Button
            android:id="@+id/updatekomoditas"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/margin_padding_22dp"
            android:text="@string/updatekomoditas"
            app:layout_constraintTop_toBottomOf="@id/spinnerunit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>